plugins {
    id "com.android.library"
}

android {
    compileSdk 35
    namespace "ninjacoder.ghostide.androidtools.r8.android"
    defaultConfig {
        minSdkVersion 26
        targetSdkVersion 32
    }
    buildTypes {
        release {
            minifyEnabled false
        }
    }
    configurations.implementation {
        exclude group: 'javax.inject', module: 'javax.inject'
        exclude group: 'org.codehaus.woodstox', module: 'stax2-api'
        exclude group: "org.jetbrains.kotlin", module: "kotlin-scripting-compiler-embeddable"
        exclude group: "org.jetbrains.kotlin", module: "kotlin-scripting-common"
        exclude group: "org.jetbrains.kotlin", module: "kotlin-scripting-jvm"
        exclude group: "org.jetbrains.kotlin", module: "kotlin-script-runtime"
    }
    packagingOptions {
        exclude 'com/sun/jna/**'
        // یا مشخص کردن فایل‌های خاصی که تداخل دارند
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation("com.android.tools:r8:8.3.37")
    implementation("androidx.appcompat:appcompat:1.7.0")
    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
    implementation("com.google.android.material:material:1.13.0-alpha11")
    implementation project(path: ":prograsssheetlib")
	implementation project(path: ":jgit")
	implementation 'com.github.HanzoDev1375:ktc:4'
	implementation("com.android.tools:sdklib:25.3.0") {
        exclude group: "com.intellij", module: "annotations"
    }
	implementation 'javax.xml.stream:stax-api:1.0-2'
    compileOnly "org.jetbrains.kotlin:kotlin-compiler:2.1.21"
    implementation 'io.github.itsaky:nb-javac-android:17.0.0.3'
    implementation 'com.google.auto.value:auto-value-annotations:1.8.2'
    annotationProcessor 'com.google.auto.value:auto-value:1.8.2'
	implementation 'com.google.code.gson:gson:2.13.1'
    implementation 'com.google.guava:guava:31.0.1-android'
    //implementation 'com.github.Cosmic-Ide.kotlinc-android:kotlinc:2a0a6a7291'
}